--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/normalize.css/normalize.css",
+              "node_modules/bulma/css/bulma.min.css",
               "src/styles.css"
             ],
             "scripts": [],
